--- a/site/index.html
+++ b/site/index.html
@@ -25,19 +25,29 @@
         height: 20rem;
         width: 20rem;
         border-radius: 50%;
-        border: none;
+        transition-duration: 0.1s;
+      }
+      .button,
+      .button:hover,
+      .button:active,
+      .button:focus-visible,
+      .button:focus {
+        outline: none;
       }
       .button.start {
         font-size: 4rem;
         color: #000088;
         background: #0000ff;
         border: 0.4rem solid #000088;
-        box-shadow: 0px 1rem 0px #0000dd,
+        box-shadow: 0px 1rem 0px #0000cc,
           0px 1.4rem 0px #000088;
       }
       .button.start::before {
         content: "START";
       }
+      .button.start:hover,
+      .button.start:active,
+      .button.start:focus-visible,
       .button.wait {
         font-size: 4rem;
         color: #000088;
@@ -52,9 +62,9 @@
       .button.click {
         font-size: 4rem;
         color: #880000;
-        background: #ee2222;
+        background: #ee0000;
         border: 0.4rem solid #880000;
-        box-shadow: 0px 1rem 0px #dd1111,
+        box-shadow: 0px 1rem 0px #cc0000,
           0px 1.4rem 0px #880000;
       }
       .button.click::before {
