--- a/site/index.html
+++ b/site/index.html
@@ -136,6 +136,9 @@
       .red {
         color: #ff6666;
       }
+      .green {
+        color: #52CCA3;
+      }
       .bg3 {
         color: #5c5c7a;
       }
@@ -278,6 +281,16 @@
             <button id="saveResult" class="button alt">Save Result</button>
           </div>
         </div>
+        <div id="resultSaveError" class="flex hide">
+          <div>
+            <p class="red">Error: Couldn't update leaderboard</p>
+          </div>
+        </div>
+        <div id="resultSaveDone" class="flex hide">
+          <div>
+            <p class="green">Result saved!</p>
+          </div>
+        </div>
         <br />
         <div class="flex">
           <button id="reset" class="button">Next Participant</button>
@@ -358,7 +371,6 @@
               document.getElementById("leaderboardLoad").classList.add("hide");
               document.getElementById("leaderboardError").classList.add("hide");
               for (var i = 0; i < result.data.length; i++) {
-                console.log(result.data[i]);
                 var row = document.getElementById("tableBody").insertRow();
                 var cellPos = row.insertCell(0);
                 var cellTime = row.insertCell(1);
@@ -380,8 +392,17 @@
           time: time,
           name: name
         }).then(
-          function () {
+          function (result) {
             getResults();
+            if (result.error) {
+              document.getElementById("resultSave").classList.add("hide");
+              document.getElementById("resultSaveError").classList.remove("hide");
+              document.getElementById("resultSaveDone").classList.add("hide");
+            } else {
+              document.getElementById("resultSave").classList.add("hide");
+              document.getElementById("resultSaveError").classList.add("hide");
+              document.getElementById("resultSaveDone").classList.remove("hide");
+            }
           }
         )
       }
@@ -401,6 +422,12 @@
           document.getElementById("button").classList.remove("wait");
           document.getElementById("button").classList.remove("click");
           document.getElementById("name").value = "";
+          document.getElementById("resultSave").classList.remove("hide");
+          document.getElementById("resultSaveError").classList.add("hide");
+          document.getElementById("resultSaveDone").classList.add("hide");
+          document.getElementById("leaderboard").classList.add("hide");
+          document.getElementById("leaderboardLoad").classList.remove("hide");
+          document.getElementById("leaderboardError").classList.add("hide");
           document.getElementById("input").classList.remove("hide");
           document.getElementById("result").classList.add("hide");
         }
