--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1, user-scalable=no"
+      content="width=device-width,minimum-scale=1,initial-scale=1,maximum-scale=1"
     />
     <title>Science Fair 2024</title>
     <style>
