--- a/site/index.html
+++ b/site/index.html
@@ -282,7 +282,7 @@
         </div>
         <div id="resultSave" class="flex">
           <div>
-            <input type="text" placeholder="Name (or leave blank)" id="name" />
+            <input type="text" placeholder="Name (or leave blank)" id="name" style="margin-bottom:0.4rem;" />
             <button id="saveResult" class="button alt">Save Result</button>
           </div>
         </div>
